AUGREL/src/objects/SfSysEvent__x.object
<CustomObject>
    <description>SfSysEvent</description>
    <externalDataSource>ODataService</externalDataSource>
    <externalName>SfSysEvent</externalName>
    <fields>
        <fullName>action__c</fullName>
        <description>action</description>
        <externalDeveloperName>action</externalDeveloperName>
        <label>action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>category__c</fullName>
        <description>category</description>
        <externalDeveloperName>category</externalDeveloperName>
        <label>category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>certifiedUsed__c</fullName>
        <description>certifiedUsed</description>
        <externalDeveloperName>certifiedUsed</externalDeveloperName>
        <label>certifiedUsed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>createdDate__c</fullName>
        <description>createdDate</description>
        <externalDeveloperName>createdDate</externalDeveloperName>
        <label>createdDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentMileage__c</fullName>
        <description>currentMileage</description>
        <externalDeveloperName>currentMileage</externalDeveloperName>
        <label>currentMileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dealer__c</fullName>
        <description>dealer</description>
        <externalDeveloperName>dealer</externalDeveloperName>
        <label>dealer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <description>description</description>
        <externalDeveloperName>description</externalDeveloperName>
        <label>description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>editMessage__c</fullName>
        <description>editMessage</description>
        <externalDeveloperName>editMessage</externalDeveloperName>
        <label>editMessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>financeReason__c</fullName>
        <description>financeReason</description>
        <externalDeveloperName>financeReason</externalDeveloperName>
        <label>financeReason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>financialAccountCustomerId__c</fullName>
        <description>financialAccountCustomerId</description>
        <externalDeveloperName>financialAccountCustomerId</externalDeveloperName>
        <label>financialAccountCustomerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>financialAccountNumber__c</fullName>
        <description>financialAccountNumber</description>
        <externalDeveloperName>financialAccountNumber</externalDeveloperName>
        <label>financialAccountNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>goodThruDate__c</fullName>
        <description>goodThruDate</description>
        <externalDeveloperName>goodThruDate</externalDeveloperName>
        <label>goodThruDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>grossPayOff__c</fullName>
        <description>grossPayOff</description>
        <externalDeveloperName>grossPayOff</externalDeveloperName>
        <label>grossPayOff</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>immediateAction__c</fullName>
        <description>immediateAction</description>
        <externalDeveloperName>immediateAction</externalDeveloperName>
        <label>immediateAction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>integrationID__c</fullName>
        <description>integrationID</description>
        <externalDeveloperName>integrationID</externalDeveloperName>
        <label>integrationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastModifiedBy__c</fullName>
        <description>lastModifiedBy</description>
        <externalDeveloperName>lastModifiedBy</externalDeveloperName>
        <label>lastModifiedBy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastModifiedDate__c</fullName>
        <description>lastModifiedDate</description>
        <externalDeveloperName>lastModifiedDate</externalDeveloperName>
        <label>lastModifiedDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>make__c</fullName>
        <description>make</description>
        <externalDeveloperName>make</externalDeveloperName>
        <label>make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netPayOff__c</fullName>
        <description>netPayOff</description>
        <externalDeveloperName>netPayOff</externalDeveloperName>
        <label>netPayOff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>payOffQuote__c</fullName>
        <description>payOffQuote</description>
        <externalDeveloperName>payOffQuote</externalDeveloperName>
        <label>payOffQuote</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>perDiem__c</fullName>
        <description>perDiem</description>
        <externalDeveloperName>perDiem</externalDeveloperName>
        <label>perDiem</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>preferredContact__c</fullName>
        <description>preferredContact</description>
        <externalDeveloperName>preferredContact</externalDeveloperName>
        <label>preferredContact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>processDate__c</fullName>
        <description>processDate</description>
        <externalDeveloperName>processDate</externalDeveloperName>
        <label>processDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>programIII__c</fullName>
        <description>programIII</description>
        <externalDeveloperName>programIII</externalDeveloperName>
        <label>programIII</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>programII__c</fullName>
        <description>programII</description>
        <externalDeveloperName>programII</externalDeveloperName>
        <label>programII</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>programI__c</fullName>
        <description>programI</description>
        <externalDeveloperName>programI</externalDeveloperName>
        <label>programI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>purchaseOpt__c</fullName>
        <description>purchaseOpt</description>
        <externalDeveloperName>purchaseOpt</externalDeveloperName>
        <label>purchaseOpt</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>quotedTo__c</fullName>
        <description>quotedTo</description>
        <externalDeveloperName>quotedTo</externalDeveloperName>
        <label>quotedTo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient__c</fullName>
        <description>recipient</description>
        <externalDeveloperName>recipient</externalDeveloperName>
        <label>recipient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>residualValue__c</fullName>
        <description>residualValue</description>
        <externalDeveloperName>residualValue</externalDeveloperName>
        <label>residualValue</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rlParentRecordType__c</fullName>
        <description>rlParentRecordType</description>
        <externalDeveloperName>rlParentRecordType</externalDeveloperName>
        <label>rlParentRecordType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serviceRecipient__c</fullName>
        <description>serviceRecipient</description>
        <externalDeveloperName>serviceRecipient</externalDeveloperName>
        <label>serviceRecipient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serviceRequestCategory__c</fullName>
        <description>serviceRequestCategory</description>
        <externalDeveloperName>serviceRequestCategory</externalDeveloperName>
        <label>serviceRequestCategory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serviceRequestType__c</fullName>
        <description>serviceRequestType</description>
        <externalDeveloperName>serviceRequestType</externalDeveloperName>
        <label>serviceRequestType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serviceRequestUserGroup__c</fullName>
        <description>serviceRequestUserGroup</description>
        <externalDeveloperName>serviceRequestUserGroup</externalDeveloperName>
        <label>serviceRequestUserGroup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serviceResult__c</fullName>
        <description>serviceResult</description>
        <externalDeveloperName>serviceResult</externalDeveloperName>
        <label>serviceResult</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serviceType__c</fullName>
        <description>serviceType</description>
        <externalDeveloperName>serviceType</externalDeveloperName>
        <label>serviceType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sourceCreatedBy__c</fullName>
        <description>sourceCreatedBy</description>
        <externalDeveloperName>sourceCreatedBy</externalDeveloperName>
        <label>sourceCreatedBy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sourceCreatedDate__c</fullName>
        <description>sourceCreatedDate</description>
        <externalDeveloperName>sourceCreatedDate</externalDeveloperName>
        <label>sourceCreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sourceSystemCreatedBy__c</fullName>
        <description>sourceSystemCreatedBy</description>
        <externalDeveloperName>sourceSystemCreatedBy</externalDeveloperName>
        <label>sourceSystemCreatedBy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>srFirstName__c</fullName>
        <description>srFirstName</description>
        <externalDeveloperName>srFirstName</externalDeveloperName>
        <label>srFirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>srLastNameBusinessName__c</fullName>
        <description>srLastNameBusinessName</description>
        <externalDeveloperName>srLastNameBusinessName</externalDeveloperName>
        <label>srLastNameBusinessName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>starsSrNumber__c</fullName>
        <description>starsSrNumber</description>
        <externalDeveloperName>starsSrNumber</externalDeveloperName>
        <label>starsSrNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <description>status</description>
        <externalDeveloperName>status</externalDeveloperName>
        <label>status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subject__c</fullName>
        <description>subject</description>
        <externalDeveloperName>subject</externalDeveloperName>
        <label>subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>topic__c</fullName>
        <description>topic</description>
        <externalDeveloperName>topic</externalDeveloperName>
        <label>topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transferReason__c</fullName>
        <description>transferReason</description>
        <externalDeveloperName>transferReason</externalDeveloperName>
        <label>transferReason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>warmTransfer__c</fullName>
        <description>warmTransfer</description>
        <externalDeveloperName>warmTransfer</externalDeveloperName>
        <label>warmTransfer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SfSysEvent</label>
    <pluralLabel>SfSysEvent</pluralLabel>
</CustomObject>